--- a/NordineElOuafrasi/Studierichtingen/derde_graad.css
+++ b/NordineElOuafrasi/Studierichtingen/derde_graad.css
@@ -1,13 +1,1053 @@
 /*Important*/
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
 
+@font-face 
+{
+    font-family: 'SIMPLIFICA';
+    src: url(/SIMPLIFICA/SIMPLIFICA/SIMPLIFICA\ Typeface.ttf);
+}
+*
+{
+    margin: 0;
+    padding: 0;
+}
+body{
+    display: flex;
+    flex-direction: column;
+    background-color: #E4E7EC;
+    height: 100%;
+}
+/*Important*/
+
+/*nav*/
+.top{
+    background-color: rgba(228, 231, 236, 0.8);
+    width: 100%;
+    position: fixed;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    z-index: 10;
+}
+.nav{
+    padding: 8px 0;
+    margin: 0 auto;
+    width: 85%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    z-index: 10;
+}
+.image{
+    width: 180px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+.txtI{
+    font-family: 'SIMPLIFICA';
+    margin-left: 30px;
+    font-size: 20px;
+}
+.image img{
+    width: 100%;
+}
+.rechts{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+form{
+    display: flex;
+    align-items: center;
+}
+
+/*Searchbox*/
+input[type="text"]
+{
+    font-family: 'SIMPLIFICA';
+    font-size: 20px;
+    background-color: white;
+    width: 50%;
+    height: 35px;
+    border: 1px solid #000;
+    outline: none;
+    padding: 0 20px;
+    border-radius: 15px 0 0 15px;
+}
+button[type="submit"]
+{
+    font-family: 'SIMPLIFICA';
+    font-size: 18px;
+    border-radius: 0 15px 15px 0;
+    letter-spacing: 1px;
+    border: none;
+    outline: none;
+    width: 30%;
+    height: 37px;
+    cursor: pointer;
+    color: white;
+    background: #1F4591;
+    transition: 0.3s;
+}
+button[type="submit"]:hover
+{
+    background: #102649;
+}
+/*Searchbox*/
+
+.nav ul{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex-direction: row;
+    margin-right: 20px;
+}
+.nav a{
+    color: #000;
+    font-size: 22px;
+    font-family: 'SIMPLIFICA';
+    text-decoration: none;
+}
+.nav li{
+    display: flex;
+    flex-direction: column;
+    margin-right: 30px;
+    list-style: none;
+}
+.menu ul li::after{
+    content: '';
+    width: 0%;
+    height: 1px;
+    background: #1F4591;
+    display: block;
+    margin: auto;
+    transition: 0.3s;
+}
+
+.menu ul li:hover::after{
+    width: 100%;
+}
+.dropdown{
+    display: flex;
+    flex-direction: column;
+    margin-top: 25px;
+}
+.menu ul li{
+    display: flex;
+    flex-direction: column;
+}
+.menu{
+    display: flex;
+    flex-direction: row;
+    margin-right: 10px;
+}
+.menu img{
+    width: 15%;
+}
+
+/*DropdownList*/
+ul.dropdown{
+    background-color: white;
+    border-radius: 15px;
+    z-index: 10;
+}
+ul li ul.dropdown li{
+    padding: 10px;
+    display: block;
+}
+ul li ul.dropdown{
+    position: absolute;
+    display: none;
+    transition: 0.3s;
+}
+ul li:hover ul.dropdown{
+    display: block;
+}
+ul.dropdown li::after{
+    width: 0%;
+    height: 1px;
+    background: #1F4591;
+    display: none;
+    margin: auto;
+    transition: 0.3s;
+}
+ul.dropdown li:hover::after{
+    width: 100%;
+}
+ul.dropdown li a:hover{
+    color: #1F4591;
+    font-weight: 600;
+}
+/*Dropdownlist*/
+.svg{ 
+    width: 4%;
+}
+.svg img{
+    width: 100%;
+}
+/*nav*/
+
+.home{
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'SIMPLIFICA';
+    margin-top: 80px;
+    width: 100%;
+    height: 900px;
+    background-image: url(/images/school1.jpg);
+    background-size: cover;
+    animation: slide 30s infinite;
+}
+@keyframes slide{
+    25%{
+        background-image: url(/images/school2.jpg);
+    }
+    50%{
+        background-image: url(/images/school3.jpg);
+    }
+    75%{
+        background-image: url(/images/school5.jpg);
+    }
+    100%{
+        background-image: url(/images/school1.jpg);
+    }
+}
+.home h1{
+    filter: none;
+}
+.school{
+    display: flex;
+    flex-direction: row;
+}
+.school a{
+    text-decoration: none;
+}
+.btn{
+    color: white;
+    padding: 15px;
+    border: 2px solid white;
+    border-radius: 10px;
+    font-family: 'Inter',sans-serif;
+    margin-right: 15px;
+}
+.btn1{
+    color: white;
+    padding: 15px;
+    border: 2px solid #1F4591;
+    background: #1F4591;
+    border-radius: 10px;
+    font-family: 'Inter',sans-serif;
+    transition: 0.3s;
+}
+.btn1:hover{
+    background: #102649;
+    border: 2px solid #102649;
+}
+.btn::after{
+    content: '';
+    width: 0%;
+    height: 1px;
+    background: white;
+    display: block;
+    margin: auto;
+    transition: 0.3s;
+}
+.btn1:hover::after{
+    width: 100%;
+}
+.btn1::after{
+    content: '';
+    width: 0%;
+    height: 1px;
+    background: white;
+    display: block;
+    margin: auto;
+    transition: 0.3s;
+}
+.btn:hover::after{
+    width: 100%;
+}
+.txtS{
+    padding-bottom: 50px;
+}
+.txtS h1{
+    font-size: 100px;
+    margin: 0 auto;
+    width: 70%;
+    text-align: center;
+}
+.pattern{
+    display: flex;
+    flex-direction: column;
+    background-image: url(/images/pattern.svg);
+    background-size: 100%;
+    padding: 100px 0px;
+}
+video{
+    width: 1000px;
+}
+.vid{
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+    padding-bottom: 0px;
+}
+.jan{
+    width: 50%;
+}
+.jan h1{
+    font-size: 60px;
+    font-weight: 100;
+    margin-bottom: 40px;
+    font-family: 'SIMPLIFICA';
+}
+.jan p{
+    width: 70%;
+    font-family: 'Inter',sans-serif;
+    margin-bottom: 15px;
+}
+.eerst{
+    background-color: #CFD8E5;
+    padding: 100px 0px;
+    
+}
+.vertline{
+    height: 388px;
+    border-left: 1px solid #808080;
+    margin-right: 130px;
+}
+.intro{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0px auto;
+    width: 85%;
+}
+.main{
+    width: 40%;
+}
+.main img{
+    width: 100%;
+}
+.last{
+    background-color: #CFD8E5;
+    padding: 100px 0px;
+}
+.einde{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-family: 'SIMPLIFICA';
+    margin: 0 auto;
+    width: 85%;
+}
+.inschrijven{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-decoration: none;
+    width:  600px;
+    background-color: #102649;
+    background-image: url(/images/Inschrijven.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    height: 355px;
+    font-size: 70px;
+    transition: 0.3s;
+}
+.studierichtingen{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-decoration: none;
+    margin-left: 50px;
+    width:  600px;
+    background-image: url(/images//Studierichtingen.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height: 355px;
+    font-size: 70px;
+    transition: 0.3s;
+}
+.studierichtingen:hover{
+    background-image: url(/images/HStudierichtingen.jpg);
+}
+.inschrijven:hover{
+    background-image: url(/images/HInschrijven.jpg);
+}
+.menu ul li:hover::after{
+    width: 100%;
+}
+.block a{
+    color: white;
+    text-decoration: none;
+    font-family: 'Inter',sans-serif;
+    margin-left: 20px;
+    transition: 0.3s;
+}
+.block a:hover{
+    color:#1F4591;
+    background: #E4E7EC;
+    padding: 10px;
+    border-radius: 15px;
+}
+/*footer*/
+.foot{
+    display: flex;
+    justify-content: flex-end;
+    margin: 0 auto;
+    width: 85%;
+}
+.wit{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    background-color: #E4E7EC;
+    margin: 0 auto;
+    width: 85%;
+    height: 250px;
+}
+.kader{
+    position: absolute;
+    background-color: rgba(31, 69, 145, 0.9);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    opacity: 80%;
+    border-radius: 15px;
+    margin-top: 90px;
+    width: 280px;
+    height: 290px;
+}
+.kader h1{
+    font-family: 'SIMPLIFICA';
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+    margin-left: 13px;
+    margin-bottom: 18px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    font-size: 28px;
+}
+.kader p{
+    font-family: 'Inter',sans-serif;
+}
+.blauw{
+    display: flex;
+    flex-direction: row;
+    background-color: rgba(31, 69, 145, 0.2);
+    width: 100%;
+    height: 220px;
+}
+.txtB{
+    font-family: 'Inter',sans-serif;
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+    width: 80%;
+    padding-top: 40px;
+}
+
+.txtBlauw{
+    color: #000;
+    margin-right: 40px;
+}
+.txtBlauw h1{
+    font-family: 'SIMPLIFICA';
+    letter-spacing: 1px;
+    font-size: 28px;
+}
+.txtBlauw p{
+    font-size: 16px;
+    margin-top: 20px;
+}
+.txtBlauw a{
+    color: #000;
+    text-decoration: none;
+}
+.txtBlauw a:hover{
+    color: #1F4591;
+    font-weight: 600;
+    text-decoration: none;
+}
+.icons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 15px;
+    margin-left: 40px;
+}
+.icon{
+    width: 14%;
+}
+.icon img{
+    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(24deg) brightness(105%) contrast(113%);
+    width: 100%;
+}
+.icons p{
+    font-size: 14px;
+    margin-left: 13px;
+    line-height: 20px;
+    width: 60%;
+}
+/*Footer*/
+/*Hamburger*/
+
+/*Hamburger*/
+
+@media screen and (max-width: 768px) {
+    body{
+        overflow-x: hidden;
+    }
+    .txtI{
+        display: none;
+    }
+    .box{
+        display: none;
+    }
+    /*hamburger menu*/
+
+    /*hamburger menu*/
+    .intro{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .jan{
+        width: 100%;
+    }
+    .jan p{
+        width: 100%;
+    }
+    .eerst{
+        padding: 50px 0px;
+    }
+    .main{
+        display: flex;
+        justify-content: center;
+        margin-top: 50px;
+        width: 100%;
+    }
+    .main img{
+        width: 90%;
+    }
+    .pattern{
+        padding: 50px 0px;
+    }
+    .einde{
+        padding: 30px 0px;
+    }
+    .vid{
+        padding-top: 0px;
+        width: 100%;
+    }
+    .home{
+        height: 450px;
+    }
+    .school{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .btn{
+        margin-right: 0px;
+        padding: 20px;
+    }
+    .btn1{
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        margin-top: 30px;
+        padding: 20px;
+    }
+    .txtS h1{
+        font-size: 60px;
+        width: 85%;
+    }
+    .top{
+        box-shadow: none;
+        background-color: #E4E7EC;
+        position: relative;
+    }
+    .image{
+        width: 50px;
+    }
+    video{
+        width: 70%;
+    }
+    .pattern{
+        display: flex;
+        justify-content: center;
+    }
+    .inschrijven{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        text-decoration: none;
+        width:  100%;
+        background-color: transparent;
+        height: 150px;
+        font-size: 40px;
+    }
+    .studierichtingen{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        text-decoration: none;
+        margin-left: 0px;
+        margin-top: 25px;
+        width:  100%;
+        height: 150px;
+        font-size: 40px;
+    }
+    .wit{
+        display: none;
+    }
+    .blauw{
+        display: none;
+    }
+    .last{
+        display: flex;
+        justify-content: center;
+        padding: 20px 0;
+    }
+    .einde{
+        justify-content: flex-start;
+        align-items: flex-start;
+        flex-direction: column;
+    }
+    .home{
+        margin-top: 0px;
+    }
+    .vertline{
+        display: none;
+    }
+    .btn1::after{
+        display: none;
+    }
+    .btn::after{
+        display: none;
+    }
+    /*foot responsive*/
+    .kader{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        border-radius: 0px;
+        height: 500px;
+        margin-top: 0px;
+    }
+    .kader h1{
+        margin-bottom: 25px;
+    }
+    .icons{
+        justify-content: center;
+    }
+    .icon{
+        width: 10%;
+    }
+    .icon img{
+        width: 100%;
+    }
+    .kader h1{
+        font-size: 35px;
+        margin-top: 0px;
+    }
+    .kader p{
+        font-size: 20px;
+    }
+    .foot{
+        justify-content: center;
+    }
+    /*foot responsive*/
+}
+@media screen and (max-width: 780px){
+
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
+
 @font-face {
     font-family: 'SIMPLIFICA';
     src: url(/SIMPLIFICA/SIMPLIFICA/SIMPLIFICA\ Typeface.ttf);
 }
+
 *{
     margin: 0;
     padding: 0;
+}
+body{
+    display: flex;
+    flex-direction: column;
+    background-color: #E4E7EC;
+    height: 100%;
+}
+/*nav*/
+.top{
+    background-color: rgba(228, 231, 236, 0.8);
+    width: 100%;
+    position: fixed;
+}
+.nav{
+    padding: 20px 0px;
+    margin: 0 auto;
+    width: 85%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+}
+.image{
+    width: 190px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+.txtI{
+    font-family: 'SIMPLIFICA';
+    margin-left: 30px;
+    font-size: 20px;
+}
+.image img{
+    width: 100%;
+}
+.rechts{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+form{
+    display: flex;
+    align-items: center;
+}
+/*Searchbox*/
+input[type="text"]
+{
+    font-family: 'SIMPLIFICA';
+    font-size: 20px;
+    background-color: white;
+    width: 50%;
+    height: 35px;
+    border: 1px solid #000;
+    outline: none;
+    padding: 0 20px;
+    border-radius: 15px 0 0 15px;
+}
+input[type="submit"]
+{
+    font-family: 'SIMPLIFICA';
+    font-size: 18px;
+    border-radius: 0 15px 15px 0;
+    border: none;
+    outline: none;
+    width: 30%;
+    height: 37px;
+    cursor: pointer;
+    color: white;
+    background: #1F4591;
+}
+/*Searchbox*/
+
+.nav ul{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex-direction: row;
+    margin-right: 20px;
+}
+.nav a{
+    color: #000;
+    font-size: 22px;
+    font-family: 'SIMPLIFICA';
+    text-decoration: none;
+}
+.nav li{
+    display: flex;
+    flex-direction: column;
+    margin-right: 30px;
+    list-style: none;
+}
+.menu ul li::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #1F4591;
+    display: block;
+    margin: auto;
+    transition: 0.3s;
+}
+
+.menu ul li:hover::after{
+    width: 100%;
+}
+.dropdown{
+    display: flex;
+    flex-direction: column;
+    margin-top: 25px;
+}
+.menu ul li{
+    display: flex;
+    flex-direction: column;
+}
+.menu{
+    display: flex;
+    flex-direction: row;
+    margin-right: 10px;
+}
+.menu img{
+    width: 15%;
+}
+
+/*DropdownList*/
+ul.dropdown{
+    background-color: white;
+    border-radius: 15px;
+    z-index: 10;
+}
+ul li ul.dropdown li{
+    padding: 10px;
+    display: block;
+}
+ul li ul.dropdown{
+    position: absolute;
+    display: none;
+    transition: 0.3s;
+}
+ul li:hover ul.dropdown{
+    display: block;
+}
+ul.dropdown li::after{
+    width: 0%;
+    height: 1px;
+    background: #1F4591;
+    display: none;
+    margin: auto;
+    transition: 0.3s;
+}
+ul.dropdown li:hover::after{
+    width: 100%;
+}
+ul.dropdown li a:hover{
+    color: #1F4591;
+    font-weight: 600;
+}
+/*Dropdownlist*/
+.svg{ 
+    width: 4%;
+}
+.svg img{
+    width: 100%;
+}
+
+/*container*/
+.container{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 40px;
+    
+    
+}
+
+.container-text{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 40px;
+}
+
+.simple-text
+{
+    padding: 10px;
+}
+
+.container-text-weti{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 0px;
+}
+
+.container-text-ict{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 40px;
+}
+
+.container-text-la{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 10px;
+}
+
+.container-text-ne-wis{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 40px;
+}
+
+.container-text-proj-woord-taal
+{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 40px;
+}
+
+.container-text-stem-ws
+{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 10px;
+}
+
+.container-text-gr-la
+{
+    width: 85%;
+    margin: 0 auto;
+    padding-top: 30px;
+}
+
+.container-head .sub-title
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 100%;
+    background-image: url(/images/inschrijving.png);
+    overflow: hidden;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 300px;
+    font-size: 60px;
+    font-weight: 300;
+    color: #fff;
+    font-family: 'SIMPLIFICA';
+    margin-top: 1em;
+}
+
+
+
+
+
+
+
+
+
+/*tabellen*/
+th, td {
+    text-align: left;
+    padding: 10px;
+    font-family: 'Inter', sans-serif;
+    width: 25%;
+    
+  }
+  
+  tr:nth-child(even){background-color: #f2f2f2;
+}
+  
+  th {
+    background-color: #1F4591;
+    border-radius: 5px;
+    color: white;
+
+  }
+
+  .list-of-bullets
+  {
+    margin: 1.5em;
+  }
+
+
+
+
+  /*footer*/
+.foot{
+    display: flex;
+    justify-content: flex-end;
+    margin: 0 auto;
+    width: 85%;
+}
+.wit{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    background-color: #E4E7EC;
+    margin: 0 auto;
+    width: 85%;
+    height: 250px;
+}
+.kader{
+    font-family: 'Inter',sans-serif;
+    position: absolute;
+    background-color: rgba(31, 69, 145, 0.9);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    opacity: 80%;
+    border-radius: 15px;
+    margin-top: 100px;
+    width: 280px;
+    height: 290px;
+}
+.kader h1{
+    margin-top: 25px;
+    margin-left: 13px;
+    margin-bottom: 18px;
+    font-size: 20px;
+}
+.blauw{
+    display: flex;
+    flex-direction: row;
+    background-color: rgba(31, 69, 145, 0.2);
+    width: 100%;
+    height: 220px;
+}
+.txtB{
+    font-family: 'Inter',sans-serif;
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+    width: 80%;
+    padding-top: 40px;
+}
+
+.txtBlauw{
+    color: #000;
+    margin-right: 130px;
+}
+.txtBlauw h1{
+    font-size: 20px;
+}
+.txtBlauw p{
+    font-size: 16px;
+    margin-top: 20px;
+}
+.txtBlauw a{
+    color: #000;
+   text-decoration: none;
+}
+.icons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 15px;
+    margin-left: 40px;
+}
+.icon{
+    width: 14%;
+}
+.icon img{
+    width: 100%;
+}
+.icons p{
+    font-size: 14px;
+    margin-left: 13px;
+    line-height: 20px;
+    width: 60%;
 }
 
 body
@@ -42,7 +1082,7 @@ header h1
     
 }
 
-.box
+.box-main
 {
     background-color: rgba(31, 69, 145, 0.);
     margin: 0.5em;
@@ -79,6 +1119,7 @@ img:hover
     border-radius: 5%;
 }
 
+
 .container-head{
     display: flex;
     justify-content: center;
@@ -90,14 +1131,10 @@ img:hover
     background-repeat: no-repeat;
     background-size: cover;
     height: 300px;
-    font-size: 100px;
+    font-size: 60px;
     font-weight: 300;
     color: #fff;
     font-family: 'SIMPLIFICA';
     margin-top: 1em;
   }
 
-  .head-title h1
-  {
-    font-size: 90px ;
-  }
