--- a/NordineElOuafrasi/Studierichtingen/studieaanbod.css
+++ b/NordineElOuafrasi/Studierichtingen/studieaanbod.css
@@ -1,11 +1,13 @@
 /*Important*/
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
 
-@font-face {
+@font-face 
+{
     font-family: 'SIMPLIFICA';
     src: url(/SIMPLIFICA/SIMPLIFICA/SIMPLIFICA\ Typeface.ttf);
 }
-*{
+*
+{
     margin: 0;
     padding: 0;
 }
@@ -185,6 +187,215 @@ ul.dropdown li a:hover{
 }
 /*nav*/
 
+.home{
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'SIMPLIFICA';
+    margin-top: 80px;
+    width: 100%;
+    height: 900px;
+    background-image: url(/images/school1.jpg);
+    background-size: cover;
+    animation: slide 30s infinite;
+}
+@keyframes slide{
+    25%{
+        background-image: url(/images/school2.jpg);
+    }
+    50%{
+        background-image: url(/images/school3.jpg);
+    }
+    75%{
+        background-image: url(/images/school5.jpg);
+    }
+    100%{
+        background-image: url(/images/school1.jpg);
+    }
+}
+.home h1{
+    filter: none;
+}
+.school{
+    display: flex;
+    flex-direction: row;
+}
+.school a{
+    text-decoration: none;
+}
+.btn{
+    color: white;
+    padding: 15px;
+    border: 2px solid white;
+    border-radius: 10px;
+    font-family: 'Inter',sans-serif;
+    margin-right: 15px;
+}
+.btn1{
+    color: white;
+    padding: 15px;
+    border: 2px solid #1F4591;
+    background: #1F4591;
+    border-radius: 10px;
+    font-family: 'Inter',sans-serif;
+    transition: 0.3s;
+}
+.btn1:hover{
+    background: #102649;
+    border: 2px solid #102649;
+}
+.btn::after{
+    content: '';
+    width: 0%;
+    height: 1px;
+    background: white;
+    display: block;
+    margin: auto;
+    transition: 0.3s;
+}
+.btn1:hover::after{
+    width: 100%;
+}
+.btn1::after{
+    content: '';
+    width: 0%;
+    height: 1px;
+    background: white;
+    display: block;
+    margin: auto;
+    transition: 0.3s;
+}
+.btn:hover::after{
+    width: 100%;
+}
+.txtS{
+    padding-bottom: 50px;
+}
+.txtS h1{
+    font-size: 100px;
+    margin: 0 auto;
+    width: 70%;
+    text-align: center;
+}
+.pattern{
+    display: flex;
+    flex-direction: column;
+    background-image: url(/images/pattern.svg);
+    background-size: 100%;
+    padding: 100px 0px;
+}
+video{
+    width: 1000px;
+}
+.vid{
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+    padding-bottom: 0px;
+}
+.jan{
+    width: 50%;
+}
+.jan h1{
+    font-size: 60px;
+    font-weight: 100;
+    margin-bottom: 40px;
+    font-family: 'SIMPLIFICA';
+}
+.jan p{
+    width: 70%;
+    font-family: 'Inter',sans-serif;
+    margin-bottom: 15px;
+}
+.eerst{
+    background-color: #CFD8E5;
+    padding: 100px 0px;
+    
+}
+.vertline{
+    height: 388px;
+    border-left: 1px solid #808080;
+    margin-right: 130px;
+}
+.intro{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0px auto;
+    width: 85%;
+}
+.main{
+    width: 40%;
+}
+.main img{
+    width: 100%;
+}
+.last{
+    background-color: #CFD8E5;
+    padding: 100px 0px;
+}
+.einde{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-family: 'SIMPLIFICA';
+    margin: 0 auto;
+    width: 85%;
+}
+.inschrijven{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-decoration: none;
+    width:  600px;
+    background-color: #102649;
+    background-image: url(/images/Inschrijven.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    height: 355px;
+    font-size: 70px;
+    transition: 0.3s;
+}
+.studierichtingen{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-decoration: none;
+    margin-left: 50px;
+    width:  600px;
+    background-image: url(/images//Studierichtingen.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height: 355px;
+    font-size: 70px;
+    transition: 0.3s;
+}
+.studierichtingen:hover{
+    background-image: url(/images/HStudierichtingen.jpg);
+}
+.inschrijven:hover{
+    background-image: url(/images/HInschrijven.jpg);
+}
+.menu ul li:hover::after{
+    width: 100%;
+}
+.block a{
+    color: white;
+    text-decoration: none;
+    font-family: 'Inter',sans-serif;
+    margin-left: 20px;
+    transition: 0.3s;
+}
+.block a:hover{
+    color:#1F4591;
+    background: #E4E7EC;
+    padding: 10px;
+    border-radius: 15px;
+}
 /*footer*/
 .foot{
     display: flex;
@@ -286,8 +497,14 @@ ul.dropdown li a:hover{
     width: 60%;
 }
 /*Footer*/
+/*Hamburger*/
 
-@media screen and (max-width: 480px) {
+/*Hamburger*/
+
+@media screen and (max-width: 768px) {
+    body{
+        overflow-x: hidden;
+    }
     .txtI{
         display: none;
     }
@@ -295,6 +512,62 @@ ul.dropdown li a:hover{
         display: none;
     }
     /*hamburger menu*/
+
+    /*hamburger menu*/
+    .intro{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .jan{
+        width: 100%;
+    }
+    .jan p{
+        width: 100%;
+    }
+    .eerst{
+        padding: 50px 0px;
+    }
+    .main{
+        display: flex;
+        justify-content: center;
+        margin-top: 50px;
+        width: 100%;
+    }
+    .main img{
+        width: 90%;
+    }
+    .pattern{
+        padding: 50px 0px;
+    }
+    .einde{
+        padding: 30px 0px;
+    }
+    .vid{
+        padding-top: 0px;
+        width: 100%;
+    }
+    .home{
+        height: 450px;
+    }
+    .school{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .btn{
+        margin-right: 0px;
+        padding: 20px;
+    }
+    .btn1{
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        margin-top: 30px;
+        padding: 20px;
+    }
+    .txtS h1{
+        font-size: 60px;
+        width: 85%;
+    }
     .top{
         box-shadow: none;
         background-color: #E4E7EC;
@@ -304,7 +577,11 @@ ul.dropdown li a:hover{
         width: 50px;
     }
     video{
-        width: 370px;
+        width: 70%;
+    }
+    .pattern{
+        display: flex;
+        justify-content: center;
     }
     .inschrijven{
         display: flex;
@@ -348,23 +625,53 @@ ul.dropdown li a:hover{
     .home{
         margin-top: 0px;
     }
+    .vertline{
+        display: none;
+    }
+    .btn1::after{
+        display: none;
+    }
+    .btn::after{
+        display: none;
+    }
+    /*foot responsive*/
+    .kader{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        border-radius: 0px;
+        height: 500px;
+        margin-top: 0px;
+    }
+    .kader h1{
+        margin-bottom: 25px;
+    }
+    .icons{
+        justify-content: center;
+    }
+    .icon{
+        width: 10%;
+    }
+    .icon img{
+        width: 100%;
+    }
+    .kader h1{
+        font-size: 35px;
+        margin-top: 0px;
+    }
+    .kader p{
+        font-size: 20px;
+    }
+    .foot{
+        justify-content: center;
+    }
+    /*foot responsive*/
+}
+@media screen and (max-width: 780px){
+
 }
 
-
-
-/*Studieaanbod*/
-
-/*Important*/
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
-
-@font-face {
-    font-family: 'SIMPLIFICA';
-    src: url(/SIMPLIFICA/SIMPLIFICA/SIMPLIFICA\ Typeface.ttf);
-}
-*{
-    margin: 0;
-    padding: 0;
-}
+/*studieaanbod*/
 
 body
 {
@@ -374,7 +681,7 @@ body
 }
 
 
-h1
+head-title
 {
     font-size: 50px;
     color: #FFF;
@@ -393,7 +700,7 @@ h1
     
 }
 
-.box
+.box-main
 {
     background-color: rgba(31, 69, 145, 0.);
     margin: 0.5em;
@@ -425,7 +732,7 @@ img:hover
     border-radius: 5%;
 }
 
-.container-head{
+.container-head h1{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -442,4 +749,12 @@ img:hover
     font-family: 'SIMPLIFICA';
     margin-top: 1em;
   }
-  
+
+  .container-head
+  {
+    
+    background-image: url(/images/pattern2.svg);
+    background-size: 100%;
+    padding: 100px 0px;
+
+  }
