--- a/BerkayUnutkan/style_berkay.css
+++ b/BerkayUnutkan/style_berkay.css
@@ -380,16 +380,15 @@ h3{
   margin: 0 auto;
   width: 85%;
 }
-.wit{
+.white{
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
-  background-color: #E4E7EC;
   margin: 0 auto;
   width: 85%;
   height: 250px;
 }
-.kader{
+.frame{
   position: absolute;
   background-color: rgba(31, 69, 145, 0.9);
   color: white;
@@ -401,7 +400,7 @@ h3{
   width: 280px;
   height: 290px;
 }
-.kader h1{
+.frame h1{
   font-family: 'SIMPLIFICA';
   display: flex;
   justify-content: center;
@@ -412,10 +411,10 @@ h3{
   letter-spacing: 1px;
   font-size: 28px;
 }
-.kader p{
+.frame p{
   font-family: 'Inter',sans-serif;
 }
-.blauw{
+.blue{
   display: flex;
   flex-direction: row;
   background-color: rgba(31, 69, 145, 0.2);
@@ -431,24 +430,24 @@ h3{
   padding-top: 40px;
 }
 
-.txtBlauw{
+.txtBlue{
   color: #000;
   margin-right: 130px;
 }
-.txtBlauw h1{
+.txtBlue h1{
   font-family: 'SIMPLIFICA';
   letter-spacing: 1px;
   font-size: 28px;
 }
-.txtBlauw p{
+.txtBlue p{
   font-size: 16px;
   margin-top: 20px;
 }
-.txtBlauw a{
+.txtBlue a{
   color: #000;
   text-decoration: none;
 }
-.txtBlauw a:hover{
+.txtBlue a:hover{
   color: #1F4591;
   font-weight: 600;
   text-decoration: none;
@@ -474,45 +473,102 @@ h3{
   width: 60%;
 }
 /*Footer*/
+
 @media screen and (max-width: 480px) {
- /*foot responsive*/
- .kader{
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  border-radius: 0px;
-  height: 400px;
-  margin-top: 0px;
+  /*nav*/
+  .box{
+      display: none;
+  }
+  .txtI{
+      display: none;
+  }
+  .image{
+      width: 50px;
+  }
+  .top{
+      box-shadow: none;
+      background-color: #E4E7EC;
+      position: relative;
+  }
+  .vl{
+      display: none;
+  }
+  .Opvoeding{
+      flex-direction: column;
+      padding: 70px 0px 100px 0px;
+  }
+  .OP{
+      width: 100%;
+  }
+  .OP p{
+      width: 100%;
+      margin-bottom: 40px;
+  }
+  .OP h1{
+      margin-bottom: 40px;
+  }
+  .fotoOP{
+      display: flex;
+      justify-content: center;
+      width: 100%;
+  }
+  .fotoOP img{
+      width: 90%;
+  }
+  .bewegingen{
+      font-size: 60px;
+      text-align: center;
+      height: 400px;
+  }
+  .end{
+      padding-bottom: 100px ;
+  }
+  /*foot responsive*/
+  .kader{
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      border-radius: 0px;
+      height: 400px;
+      padding: 10px 0px;
+      margin-top: 0px;
+  }
+  .icons{
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      margin-left: 0px;
+  }
+  .icon{
+      width: 10%;
+      margin-bottom: 10px;
+  }
+  .icon img{
+      width: 100%;
+  }
+  .icons p{
+      margin-left: 0px;
+  }
+  .kader h1{
+      text-align: center;
+      font-size: 40px;
+      margin-bottom: 5px;
+      margin-top: 0px;
+  }
+  .kader p{
+      font-size: 15px;
+  }
+  .foot{
+      justify-content: center;
+  }
+  .wit{
+      display: none;
+  }
+  .blauw{
+      display: none;
+  }
+  /*foot responsive*/
 }
-.icons{
-  justify-content: center;
-}
-.icon{
-  width: 10%;
-}
-.icon img{
-  width: 100%;
-}
-.kader h1{
-  text-align: center;
-  font-size: 40px;
-  margin-bottom: 25px;
-  margin-top: 0px;
-}
-.kader p{
-  font-size: 20px;
-}
-.foot{
-  justify-content: center;
-}
-.wit{
-  display: none;
-}
-.blauw{
-  display: none;
-}
-}
-/*foot responsive*/
 
 @media only screen and (max-width: 480px) {
 	a {
