--- a/GloryMenga/style_Opvoedingsproject_Glory.css
+++ b/GloryMenga/style_Opvoedingsproject_Glory.css
@@ -47,7 +47,7 @@ body{
 .image img{
     width: 100%;
 }
-.rechts{
+.right{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -185,7 +185,7 @@ ul.dropdown li a:hover{
     display: flex;
     flex-direction: column;
 }
-.Opvoeding{
+.education{
     display: flex;
     flex-direction: row;
     background-color: #CFD8E5;
@@ -193,26 +193,26 @@ ul.dropdown li a:hover{
     margin: 0 auto;
     width: 85%;
 }
-.OP{
+.ED{
     width: 60%;
 }
-.fotoOP{
+.picED{
     display: flex;
     justify-content: flex-end;
     width: 50%;
 }
-.fotoOP img{
+.picED img{
     width: 70%;
 
 }
-.OP h1{
+.ED h1{
     font-family: 'SIMPLIFICA';
     letter-spacing: 1px;
     font-size: 40px;
     margin-bottom: 60px;
     font-weight: 100;
 }
-.OP p{
+.ED p{
     font-family: 'Inter',sans-serif;
     width: 80%;
 }
@@ -220,60 +220,60 @@ ul.dropdown li a:hover{
     padding-bottom: 20px;
     background-image: url(/images/pattern2.svg);
 }
-.stappen{
+.steps{
     margin: 50px auto;
     width: 85%;
 }
-.stappen h1{
+.steps h1{
     font-family: 'SIMPLIFICA';
     font-size: 24px;
 }
-.stap{
+.step{
     width: 50%;
     margin-top: 80px;
 }
-.stap h1{
+.step h1{
     text-decoration: none;
     margin-bottom: 20px;
     letter-spacing: 1px;
     font-weight: 100;
     font-size: 40px;
 }
-.stap p{
+.step p{
     font-family: 'Inter',sans-serif;
 }
-.stappen2{
+.steps2{
     display: flex;
     justify-content: flex-end;
     margin: 0px auto;
     width: 85%;
 }
-.stappen2 h1{
+.steps2 h1{
     font-family: 'SIMPLIFICA';
     font-size: 24px;
 }
-.stap2{
+.step2{
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     margin-top: 80px;
     width: 50%;
 }
-.stap2 h1{
+.step2 h1{
     text-decoration: none;
     margin-bottom: 20px;
     letter-spacing: 1px;
     font-weight: 100;
     font-size: 40px;
 }
-.stap2 p{
+.step2 p{
     font-family: 'Inter',sans-serif;
 }
-.titel{
+.title{
     font-size: 24px;
     font-family: 'SIMPLIFICA';
 }
-.titel h1{
+.title h1{
     font-weight: 100;
     font-size: 60px;
 }
@@ -284,7 +284,7 @@ ul.dropdown li a:hover{
 .first{
     background-color: #CFD8E5;
 }
-.bewegingen{
+.movement{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -292,6 +292,12 @@ ul.dropdown li a:hover{
     background-repeat: no-repeat;
     background-size: cover;
     height: 600px;
+}
+.movement h1{
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    width: 85%;
     font-family: 'SIMPLIFICA';
     font-size: 100px;
     font-weight: 600;
@@ -417,35 +423,45 @@ ul.dropdown li a:hover{
     .vl{
         display: none;
     }
-    .Opvoeding{
+    .education{
         flex-direction: column;
         padding: 70px 0px 100px 0px;
     }
-    .OP{
+    .ED{
         width: 100%;
     }
-    .OP p{
+    .ED p{
         width: 100%;
         margin-bottom: 40px;
     }
-    .OP h1{
+    .ED h1{
         margin-bottom: 40px;
     }
-    .fotoOP{
+    .picED{
         display: flex;
         justify-content: center;
         width: 100%;
     }
-    .fotoOP img{
+    .picED img{
         width: 90%;
     }
-    .bewegingen{
-        font-size: 60px;
-        text-align: center;
+    .movement{
         height: 400px;
     }
+    .movement h1{
+        font-size: 60px;
+        text-align: center;
+    }
+    .step{
+        margin-top: 110px;
+        width: 100%;
+    }
+    .step2{
+        margin-top: 80px;
+        width: 100%;
+    }
     .end{
-        padding-bottom: 100px ;
+        padding-bottom: 110px ;
     }
     /*foot responsive*/
     .frame{
